[package]
name = "pixelshift"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
bytes = "1.11.0"
dotenvy = "0.15.7"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
snafu = "0.8.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
